# factuurcontrole

./: .env.example  .gitignore  HANDOFF.md  README.md  SECURITY_REVIEW.md  pipelineprompt.md  prdprompt.md  pyproject.toml  requirements.txt  todo.md
analytics/: duckdb_queries.sql
backend/: manage.py
backend/apps/accounts/: admin.py  forms.py  models.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_emaillogincode.py
backend/apps/analytics/: admin.py  models.py  services.py
backend/apps/analytics/migrations/: 0001_controlcontent.py
backend/apps/clients/: admin.py  models.py  services.py
backend/apps/clients/migrations/: 0001_initial.py  (+1 more)
backend/apps/dashboards/: urls.py  views.py
backend/apps/sync_jobs/: admin.py  apps.py  models.py  services.py
backend/config/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: app.css
static/js/: dashboard.js
sync_pipeline/jobs/: sync_client.py
sync_pipeline/parquet/: datasets.py  manifest.py  writer.py
sync_pipeline/sqlserver/: connection.py  extractor.py
templates/: base.html
templates/dashboards/: client_dashboard.html  control_1004_report.html  control_1005_report.html  control_10_report.html  control_11_report.html  control_12_report.html  control_13_report.html  control_1_report.html  control_20_report.html  drilldown.html  home.html
templates/dashboards/includes/: control_nav_buttons.html  control_trend_block.html
templates/registration/: email_login_code.html  email_login_code.txt  login.html  verify_login.html
uploads/: Controles Smartfact.docx
(+4 files in other folders)
