[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "factuurcontrole-platform"
version = "0.1.0"
description = "Invoice control dashboard platform scaffold"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "Django>=5.1,<6.0",
  "duckdb>=1.1.0",
  "pandas>=2.2.0",
  "pyarrow>=19.0.0",
  "pyodbc>=5.1.0",
  "python-dotenv>=1.0.1",
  "psycopg[binary]>=3.2.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["backend"]

[tool.setuptools.package-dir]
"" = "backend"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
pythonpath = ["backend"]
